@@ -1,5 +1,7 @@
 3.0.1-stable (2013-??-??)
 	* Fixed: URI properties should not escape ; and ,.
+	* Fixed: VCard 4 documents now correctly use URI as a default value-type
+	  for PHOTO and others. BINARY no longer exists in vCard 4.
 
 3.0.0-stable (2013-06-21)
 	* Fixed: includes.php file was still broken. Our tool to generate it had
